force-app/main/default/objects/Account/fields/numm__Forme_juridique__c.field-meta.xml
<CustomField>
    <fullName>numm__Forme_juridique__c</fullName>
    <label>Forme juridique</label>
    <length>100</length>
    <type>Text</type>
</CustomField>