force-app/main/default/objects/Account/fields/numm__IBAN__c.field-meta.xml
<CustomField>
    <fullName>numm__IBAN__c</fullName>
    <label>IBAN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>