force-app/main/default/objects/Account/fields/numm__MandatAu__c.field-meta.xml
<CustomField>
    <fullName>numm__MandatAu__c</fullName>
    <label>Mandat au</label>
    <type>Date</type>
</CustomField>