force-app/main/default/objects/Account/fields/numm__MandatDu__c.field-meta.xml
<CustomField>
    <fullName>numm__MandatDu__c</fullName>
    <label>Mandat du</label>
    <type>Date</type>
</CustomField>