force-app/main/default/objects/Account/fields/numm__Num_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__Num_TVA__c</fullName>
    <label>N° TVA</label>
    <length>14</length>
    <type>Text</type>
</CustomField>