force-app/main/default/objects/Account/fields/numm__Predecesseur__c.field-meta.xml
<CustomField>
    <fullName>numm__Predecesseur__c</fullName>
    <label>Prédecesseur</label>
    <length>100</length>
    <type>Text</type>
</CustomField>