force-app/main/default/objects/Account/fields/numm__RCS__c.field-meta.xml
<CustomField>
    <fullName>numm__RCS__c</fullName>
    <label>RCS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>