force-app/main/default/objects/Account/fields/numm__Societe__c.field-meta.xml
<CustomField>
    <fullName>numm__Societe__c</fullName>
    <label>Société</label>
    <length>255</length>
    <type>Text</type>
</CustomField>