force-app/main/default/objects/Account/fields/numm__StatutMandat__c.field-meta.xml
<CustomField>
    <fullName>numm__StatutMandat__c</fullName>
    <label>Statut du Mandat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Fin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>