force-app/main/default/objects/Account/fields/numm__UpsellOpportunity__c.field-meta.xml
<CustomField>
    <fullName>numm__UpsellOpportunity__c</fullName>
    <label>Upsell Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>