force-app/main/default/objects/Account/fields/OauthId__c.field-meta.xml
<CustomField>
    <fullName>OauthId__c</fullName>
    <label>ID OAuth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>