force-app/main/default/objects/Account/fields/OnlinePartner__c.field-meta.xml
<CustomField>
    <fullName>OnlinePartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cabinet Online</label>
    <type>Checkbox</type>
</CustomField>