force-app/main/default/objects/Account/fields/OrigineWebsite__c.field-meta.xml
<CustomField>
    <fullName>OrigineWebsite__c</fullName>
    <label>Site d&#39;origine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novaa</fullName>
            </value>
            <value>
                <fullName>Incityz</fullName>
            </value>
            <value>
                <fullName>Onlicorn</fullName>
            </value>
            <value>
                <fullName>Ocompta</fullName>
            </value>
            <value>
                <fullName>Tiime</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>LEC</fullName>
            </value>
            <value>
                <fullName>Sesame</fullName>
            </value>
            <value>
                <fullName>Start.fr</fullName>
            </value>
            <value>
                <fullName>Pepit</fullName>
            </value>
            <value>
                <fullName>LNEC</fullName>
                <label>Le Net Expert Comptable</label>
            </value>
            <value>
                <fullName>Condillac</fullName>
            </value>
            <value>
                <fullName>Goneo</fullName>
            </value>
            <value>
                <fullName>Evocompta</fullName>
            </value>
            <value>
                <fullName>Ola-compta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>