force-app/main/default/objects/Account/fields/PartershipComments__c.field-meta.xml
<CustomField>
    <fullName>PartershipComments__c</fullName>
    <label>Commentaires partenariat</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>