force-app/main/default/objects/Account/fields/PartnerBranding__c.field-meta.xml
<CustomField>
    <fullName>PartnerBranding__c</fullName>
    <label>Branding partenaire</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novaa</fullName>
            </value>
            <value>
                <fullName>Novaa - Marseille</fullName>
            </value>
            <value>
                <fullName>Incityz</fullName>
            </value>
            <value>
                <fullName>Onlicorn</fullName>
            </value>
            <value>
                <fullName>Tiime</fullName>
            </value>
            <value>
                <fullName>L&#39;Expert-Comptable.com</fullName>
            </value>
            <value>
                <fullName>Pepit</fullName>
            </value>
            <value>
                <fullName>Evocompta</fullName>
            </value>
            <value>
                <fullName>Goneo</fullName>
            </value>
            <value>
                <fullName>Ola-compta</fullName>
            </value>
            <value>
                <fullName>L-Expert-Comptable Lille</fullName>
            </value>
            <value>
                <fullName>Condillac</fullName>
            </value>
            <value>
                <fullName>Auficom</fullName>
            </value>
            <value>
                <fullName>Proxicompta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>