force-app/main/default/objects/Account/fields/PartnerCategory__c.field-meta.xml
<CustomField>
    <fullName>PartnerCategory__c</fullName>
    <label>Catégorie de partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banque</fullName>
            </value>
            <value>
                <fullName>Assurance</fullName>
            </value>
            <value>
                <fullName>Avocat</fullName>
            </value>
            <value>
                <fullName>LegalTech</fullName>
            </value>
            <value>
                <fullName>Coworking</fullName>
            </value>
            <value>
                <fullName>Domiciliation</fullName>
            </value>
            <value>
                <fullName>Notaire</fullName>
            </value>
            <value>
                <fullName>Portage Salariale</fullName>
            </value>
            <value>
                <fullName>Incubateurs / Accélérateur / Pépinières</fullName>
            </value>
            <value>
                <fullName>Ecole / Formation</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>SSII</fullName>
            </value>
            <value>
                <fullName>Agence</fullName>
            </value>
            <value>
                <fullName>Cabinet de Conseil</fullName>
            </value>
            <value>
                <fullName>Entreprises</fullName>
            </value>
            <value>
                <fullName>Cabinet de reclassement</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>