force-app/main/default/objects/Account/fields/PartnerOfferDetails__c.field-meta.xml
<CustomField>
    <fullName>PartnerOfferDetails__c</fullName>
    <label>Détail de l&#39;offre partenaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>