force-app/main/default/objects/Account/fields/PartnerQuality__c.field-meta.xml
<CustomField>
    <fullName>PartnerQuality__c</fullName>
    <label>Qualité du partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Star</fullName>
                <label>⭐</label>
            </value>
            <value>
                <fullName>2Stars</fullName>
                <label>⭐⭐</label>
            </value>
            <value>
                <fullName>3Stars</fullName>
                <label>⭐⭐⭐</label>
            </value>
            <value>
                <fullName>4Stars</fullName>
                <label>⭐⭐⭐⭐</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>