force-app/main/default/objects/Account/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Détail Partenariat</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partenariat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entreprises (Détail Partenariat)</relationshipLabel>
    <relationshipName>Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>