force-app/main/default/objects/Account/fields/PartnershipDirection__c.field-meta.xml
<CustomField>
    <fullName>PartnershipDirection__c</fullName>
    <label>Sens du partenariat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PartenaireEnvoieLeads</fullName>
                <label>le partenaire envoie des leads</label>
            </value>
            <value>
                <fullName>PartenaireRecoieLeads</fullName>
                <label>le partenaire reçoit des leads</label>
            </value>
            <value>
                <fullName>PartenaireEnvoieRecoieLeads</fullName>
                <label>le partenaire reçoit et envoie des leads</label>
            </value>
            <value>
                <fullName>Envoie et reçoit</fullName>
                <isActive>false</isActive>
                <label>Envoie et reçoit</label>
            </value>
            <value>
                <fullName>Envoie leads</fullName>
                <isActive>false</isActive>
                <label>Envoie leads</label>
            </value>
            <value>
                <fullName>Reçoit leads</fullName>
                <isActive>false</isActive>
                <label>Reçoit leads</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>