force-app/main/default/objects/Account/fields/PartnerStatus__c.field-meta.xml
<CustomField>
    <fullName>PartnerStatus__c</fullName>
    <label>Statut Partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Stage1</fullName>
                <label>Etape 1</label>
            </value>
            <value>
                <fullName>Stage2</fullName>
                <label>Etape 2</label>
            </value>
            <value>
                <fullName>Blacklist</fullName>
                <label>Disqualifié</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>