force-app/main/default/objects/Account/fields/PartnerTracking__c.field-meta.xml
<CustomField>
    <fullName>PartnerTracking__c</fullName>
    <label>Suivi partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADemarcher</fullName>
                <default>true</default>
                <label>A démarcher</label>
            </value>
            <value>
                <fullName>FirstContact</fullName>
                <label>1er contact</label>
            </value>
            <value>
                <fullName>Relances</fullName>
            </value>
            <value>
                <fullName>RDV / CALL</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
                <label>Perdu</label>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Mail / Appel</fullName>
                <isActive>false</isActive>
                <label>Mail / Appel</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Relance</fullName>
                <isActive>false</isActive>
                <label>Relance</label>
            </value>
            <value>
                <fullName>Relance 2</fullName>
                <isActive>false</isActive>
                <label>Relance 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>