force-app/main/default/objects/Account/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <label>Type de partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groupe</fullName>
            </value>
            <value>
                <fullName>Hors Groupe</fullName>
            </value>
            <value>
                <fullName>Gratuit</fullName>
            </value>
            <value>
                <fullName>Payant</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
                <isActive>false</isActive>
                <label>Association</label>
            </value>
            <value>
                <fullName>Banque</fullName>
                <isActive>false</isActive>
                <label>Banque</label>
            </value>
            <value>
                <fullName>Marketplace</fullName>
                <isActive>false</isActive>
                <label>Marketplace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>