force-app/main/default/objects/Account/fields/PlaceOfProduction__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfProduction__c</fullName>
    <label>Lieux de production</label>
    <length>30</length>
    <type>Text</type>
</CustomField>