force-app/main/default/objects/Account/fields/ProdManager__c.field-meta.xml
<CustomField>
    <fullName>ProdManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargé de prod</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entreprises</relationshipName>
    <type>Lookup</type>
</CustomField>