force-app/main/default/objects/Account/fields/ProfitsTaxation__c.field-meta.xml
<CustomField>
    <fullName>ProfitsTaxation__c</fullName>
    <label>Imposition des bénéfices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IR - BNC</fullName>
            </value>
            <value>
                <fullName>IR - BIC régime réel simplifié</fullName>
            </value>
            <value>
                <fullName>IR - BIC régime réel normal</fullName>
            </value>
            <value>
                <fullName>IS - régime réel simplifié</fullName>
            </value>
            <value>
                <fullName>IS- régime réel normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>