force-app/main/default/objects/Account/fields/PublicGDriveId__c.field-meta.xml
<CustomField>
    <fullName>PublicGDriveId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Hash du team drive partagé avec le client</description>
    <label>Id GDrive Public</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>