force-app/main/default/objects/Account/fields/RecommendedBy__c.field-meta.xml
<CustomField>
    <fullName>RecommendedBy__c</fullName>
    <label>Recommandé par</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>