force-app/main/default/objects/Account/fields/ReferentCollab__c.field-meta.xml
<CustomField>
    <fullName>ReferentCollab__c</fullName>
    <label>Collaborateur Réferent</label>
    <length>5</length>
    <type>Text</type>
</CustomField>