force-app/main/default/objects/Account/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>Date d&#39;immatriculation</label>
    <type>Date</type>
</CustomField>