force-app/main/default/objects/Account/fields/RevenueCategory__c.field-meta.xml
<CustomField>
    <fullName>RevenueCategory__c</fullName>
    <label>Catégorie de revenus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RevenueCategories</valueSetName>
    </valueSet>
</CustomField>