force-app/main/default/objects/Account/fields/SalesRevenueBracket__c.field-meta.xml
<CustomField>
    <fullName>SalesRevenueBracket__c</fullName>
    <label>Tranche de CA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tranches_de_CA</valueSetName>
    </valueSet>
</CustomField>