force-app/main/default/objects/Account/fields/Siren__c.field-meta.xml
<CustomField>
    <fullName>Siren__c</fullName>
    <formula>LEFT( Siret__c , 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIREN</label>
    <type>Text</type>
</CustomField>