force-app/main/default/objects/Account/fields/SirenBGI__c.field-meta.xml
<CustomField>
    <fullName>SirenBGI__c</fullName>
    <label>SIREN BGI</label>
    <length>9</length>
    <type>Text</type>
</CustomField>