force-app/main/default/objects/Account/fields/Siret__c.field-meta.xml
<CustomField>
    <fullName>Siret__c</fullName>
    <externalId>true</externalId>
    <label>SIRET</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>