force-app/main/default/objects/Account/fields/SiretKey__c.field-meta.xml
<CustomField>
    <fullName>SiretKey__c</fullName>
    <label>Clé Siret</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>