force-app/main/default/objects/Account/fields/SourceDetails__c.field-meta.xml
<CustomField>
    <fullName>SourceDetails__c</fullName>
    <label>Détails de la source payante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_de_sources</valueSetName>
    </valueSet>
</CustomField>