force-app/main/default/objects/Account/fields/Tarif__c.field-meta.xml
<CustomField>
    <fullName>Tarif__c</fullName>
    <label>Tarif</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>