force-app/main/default/objects/Account/fields/TaxingType__c.field-meta.xml
<CustomField>
    <fullName>TaxingType__c</fullName>
    <label>Type d&#39;imposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>