force-app/main/default/objects/Account/fields/TaxSystem__c.field-meta.xml
<CustomField>
    <fullName>TaxSystem__c</fullName>
    <label>Régime fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxSystemsList</valueSetName>
    </valueSet>
</CustomField>