force-app/main/default/objects/Account/fields/TmcCommentsHistory__c.field-meta.xml
<CustomField>
    <fullName>TmcCommentsHistory__c</fullName>
    <label>Historique Commentaires TMC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>