force-app/main/default/objects/Account/fields/TransfertDate__c.field-meta.xml
<CustomField>
    <fullName>TransfertDate__c</fullName>
    <label>Date de transfert</label>
    <type>DateTime</type>
</CustomField>