force-app/main/default/objects/Account/fields/TrigramComptable__c.field-meta.xml
<CustomField>
    <fullName>TrigramComptable__c</fullName>
    <label>Trigram Comptable</label>
    <length>10</length>
    <type>Text</type>
</CustomField>