force-app/main/default/objects/Account/fields/TypeOfMail__c.field-meta.xml
<CustomField>
    <fullName>TypeOfMail__c</fullName>
    <label>Type de messagerie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>