force-app/main/default/objects/Account/fields/UnderObservation__c.field-meta.xml
<CustomField>
    <fullName>UnderObservation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sous Surveillance</label>
    <type>Checkbox</type>
</CustomField>