force-app/main/default/objects/Account/fields/ValidatedForAppWallet__c.field-meta.xml
<CustomField>
    <fullName>ValidatedForAppWallet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validée pour l’App Wallet</label>
    <type>Checkbox</type>
</CustomField>