force-app/main/default/objects/Account/fields/VatLimitDate__c.field-meta.xml
<CustomField>
    <fullName>VatLimitDate__c</fullName>
    <label>Date limite TVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VatLimitDates</valueSetName>
    </valueSet>
</CustomField>