force-app/main/default/objects/Account/fields/VatSystem__c.field-meta.xml
<CustomField>
    <fullName>VatSystem__c</fullName>
    <label>Régime TVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VatSytemsList</valueSetName>
    </valueSet>
</CustomField>