force-app/main/default/objects/Account/fields/WalletStatus__c.field-meta.xml
<CustomField>
    <fullName>WalletStatus__c</fullName>
    <label>Statut Wallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CGUPending</fullName>
                <label>CGU</label>
            </value>
            <value>
                <fullName>TIIMEPending</fullName>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <label>Incomplet</label>
            </value>
            <value>
                <fullName>KYCPending</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>KYCRefused</fullName>
                <label>KYC Refusé</label>
            </value>
            <value>
                <fullName>KYCValidated</fullName>
                <label>KYC Validé</label>
            </value>
            <value>
                <fullName>CBOrdered</fullName>
                <label>CB Commandée</label>
            </value>
            <value>
                <fullName>CBActivated</fullName>
                <label>CB Activée</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Fermé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>