force-app/main/default/objects/Account/fields/Warned__c.field-meta.xml
<CustomField>
    <fullName>Warned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client averti</label>
    <type>Checkbox</type>
</CustomField>