force-app/main/default/objects/Account/fields/WebFormComments__c.field-meta.xml
<CustomField>
    <fullName>WebFormComments__c</fullName>
    <label>Commentaires du formulaire Web</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>