force-app/main/default/objects/Account/fields/WithoutVat__c.field-meta.xml
<CustomField>
    <fullName>WithoutVat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non soumis à la TVA</label>
    <type>Checkbox</type>
</CustomField>