force-app/main/default/objects/Account/fields/YearOfCreate__c.field-meta.xml
<CustomField>
    <fullName>YearOfCreate__c</fullName>
    <label>Année de Création</label>
    <length>4</length>
    <type>Text</type>
</CustomField>