force-app/main/default/objects/Account/recordTypes/InternalCompany.recordType-meta.xml
<RecordType>
    <fullName>InternalCompany</fullName>
    <active>true</active>
    <label>Société Interne</label>
</RecordType>