force-app/main/default/objects/Account/recordTypes/numm__Client.recordType-meta.xml
<RecordType>
    <fullName>numm__Client</fullName>
    <active>false</active>
    <label>Client</label>
</RecordType>