force-app/main/default/objects/Account/validationRules/numm__DatesMandats.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__DatesMandats</fullName>
    <active>true</active>
    <description>date &quot;Mandat du&quot; inférieure ou égale à la date &quot;Mandat au&quot;</description>
    <errorConditionFormula>numm__MandatDu__c &gt;  numm__MandatAu__c</errorConditionFormula>
    <errorMessage>Dates du mandat incorrectes</errorMessage>
</ValidationRule>